@@ -1,3 +1,4 @@
 <key_list>
+ <key>full_text</key>
  <key>sphinxse_index</key>
 </key_list>
