@@ -1,7 +1,11 @@
 erp5_mysql_innodb/SQLCatalog_catalogSphinxSE
 erp5_mysql_innodb/SQLCatalog_deferSphinxSEIndexing
 erp5_mysql_innodb/SQLCatalog_makeFullTextQuery
+erp5_mysql_innodb/z0_drop_fulltext
 erp5_mysql_innodb/z0_drop_sphinxse_index
+erp5_mysql_innodb/z0_uncatalog_fulltext
 erp5_mysql_innodb/z0_uncatalog_sphinxse_index
+erp5_mysql_innodb/z_catalog_fulltext_list
 erp5_mysql_innodb/z_catalog_sphinxse_index_list
+erp5_mysql_innodb/z_create_fulltext
 erp5_mysql_innodb/z_create_sphinxse_index
