@@ -1,1 +1,2 @@
+full_text
 sphinxse_index
